--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ SUBTENSOR_NETWORK=finney
 WALLET_NAME=your_wallet_name
 WALLET_HOTKEY=your_hotkey_name
 
+# Free Scraper Proxy (Optional - for bypassing rate limits)
+# Format: http://username:password@host:port
+PROXY_URL=http://andriiPol:andriiPol_country-pl_city-krakow_session-2pPZfx45_lifetime-168h@geo.iproyal.com:12321
+
 # If using scrapingbee proxy
 SCRAPINGBEE_API_KEY=your_scrapingbee_api_key
 
